# Gnemo

./: .anjuta_sym_db.db  Makefile.am  Makefile.in  README  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  gnemo
Debug/src/.deps/: gnemo.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  gnemo.c  gnemo.c~  gnemo.h  gnemo.h~  main.c  main.c~
